alert, correct variables and console.

--- a/index.html
+++ b/index.html
@@ -14,10 +14,17 @@
 // alert saying hello world //
 alert('hello world')
 
-console.log(bpd)
+let a = 22; 
+let b = 44;
+
+a = a + b
+b = a - b;
+a = a - b;
+
+console.log(a, b)
 
 
-
+ 
 </script>
 
 </body>
