removed old code added new, not done

--- a/index.html
+++ b/index.html
@@ -11,24 +11,25 @@
 
 <script>
 
-// alert saying hello world //
-alert('hello world')
+let D = '28.02.1999';
+let pi  = 3.14;
 
-let a = 22; 
-let b = 44;
+console.log(D, pi)
 
-a = a + b
-b = a - b;
-a = a - b;
+// constent value
 
-console.log(a, b)
+let name = prompt('name')
+let address = prompt('address')
+let phone_number = prompt('phone number')
 
-let 1 = 2;
-let 2 = 1;
+console.log(`student ${name}, address ${address}, phone number ${phone_number}.`)
 
+//rubel to usd converter
 
-console.log(1, 2)
- 
+let a = 5, b = 10, c;
+  c = a + b;
+  console.log(c);
+
 </script>
 
 </body>
