--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@ let pi  = 3.14;
 
 console.log(D, pi)
 
-// constent value
+const v = 101;
+
+
+
+console.log(v)
 
 let name = prompt('name')
 let address = prompt('address')
