very bad rubel to usd added

--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
 
 <script>
 
-let D = '28.02.1999';
+let D = '28.02.1999'; 
 let pi  = 3.14;
 
 console.log(D, pi)
 
 const v = 101;
 
-v = 202;
+
 
 console.log(v)
 
@@ -28,7 +28,10 @@ let phone_number = prompt('phone number')
 
 console.log(`student ${name}, address ${address}, phone number ${phone_number}.`)
 
-//rubel to usd converter
+
+let rub = prompt('rubel') / 58;
+
+console.log(rub)
 
 let a = 5, b = 10, c;
   c = a + b;
