--- a/index.html
+++ b/index.html
@@ -37,6 +37,37 @@ let a = 5, b = 10, c;
   c = a + b;
   console.log(c);
 
+  console.log('start')
+
+  const T = 6;
+
+if(T < 10){
+  console.log('constant less than 10') 
+} else{
+  console.log()
+}
+ 
+  console.log('end')
+
+let nameData = 'borger';
+let passwordData = "1234";
+
+let Name = prompt('login?')
+let password = prompt('password?')
+
+if(nameData === Name){
+    if(passwordData === password){
+        console.log('welcome');
+    } else{
+      console.log('password error');
+    }
+} else{
+  console.log('error')
+}
+
+
+
+
 </script>
 
 </body>
