--- a/index.html
+++ b/index.html
@@ -55,17 +55,18 @@ let passwordData = "1234";
 let Name = prompt('login?')
 let password = prompt('password?')
 
-if(nameData === Name){
-    if(passwordData === password){
-        console.log('welcome');
-    } else{
-      console.log('password error');
-    }
+if(nameData === Name && passwordData === password){
+    console.log('welcome');
 } else{
   console.log('error')
 }
 
+let F = 2;
+let R = 3; 
 
+let result = a ? 'a' : 'b'
+
+console.log(result)
 
 
 </script>
