--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ if(nameData === Name && passwordData === password){
 let F = 2;
 let R = 3; 
 
-let result = a ? 'a' : 'b'
+let result = a > 1 ? 'active' : ' '
 
 console.log(result)
 
