--- a/index.html
+++ b/index.html
@@ -61,13 +61,29 @@ if(nameData === Name && passwordData === password){
   console.log('error')
 }
 
-let F = 2;
-let R = 3; 
+let code = 'js'
 
-let result = a > 1 ? 'active' : ' '
+switch(code){
+  case('html') : 
+  console.log('html');
+  break;
 
-console.log(result)
+  case('css') : 
+  console.log('css');
+  break;
 
+  case('js') : 
+  console.log('js');
+  break;
+
+  case('react') : 
+  console.log('react');
+
+  default:
+    console.log('default')
+
+
+}
 
 </script>
 
