--- a/index.html
+++ b/index.html
@@ -11,79 +11,36 @@
 
 <script>
 
-let D = '28.02.1999'; 
-let pi  = 3.14;
-
-console.log(D, pi)
-
-const v = 101;
-
-
-
-console.log(v)
-
-let name = prompt('name')
-let address = prompt('address')
-let phone_number = prompt('phone number')
-
-console.log(`student ${name}, address ${address}, phone number ${phone_number}.`)
-
-
-let rub = prompt('rubel') / 58;
-
-console.log(rub)
-
-let a = 5, b = 10, c;
-  c = a + b;
-  console.log(c);
-
-  console.log('start')
-
-  const T = 6;
-
-if(T < 10){
-  console.log('constant less than 10') 
-} else{
-  console.log()
-}
- 
-  console.log('end')
-
-let nameData = 'borger';
-let passwordData = "1234";
-
-let Name = prompt('login?')
-let password = prompt('password?')
-
-if(nameData === Name && passwordData === password){
-    console.log('welcome');
-} else{
-  console.log('error')
+function world(){
+  alert('Hello world')
 }
 
-let code = 'js'
-
-switch(code){
-  case('html') : 
-  console.log('html');
-  break;
-
-  case('css') : 
-  console.log('css');
-  break;
-
-  case('js') : 
-  console.log('js');
-  break;
-
-  case('react') : 
-  console.log('react');
-
-  default:
-    console.log('default')
-
-
+function java(){
+  console.log('JavaScript')
 }
+
+function constants(F){
+  if( F < 10){
+    console.log('constant less than 10');
+  } else {
+    console.log('constant not less than 10')
+  }
+}
+
+let G = 'borger';
+
+function lor(){
+  if( G === 'lorem'){
+    console.log('you have error in the text')
+  } else{
+    console.log('varibale content borger')
+  }
+}
+
+constants(5)
+world()
+java()
+lor()
 
 </script>
 
