--- a/index.html
+++ b/index.html
@@ -40,24 +40,31 @@
     } return num3
   }
 
-
+function dis(a,b,c){
+  console.log(b``2``-4ac)
+}
 
 
 
   function oed(a, b){
-    if (a, b % 2 === 0) {
-        return a, b
-    } else {
+    if(a % 2 === 0 && b % 2 === 0){
+      return a * b
+      } else if (a % 2 !== 0 && b % 2 !== 0){
       return a + b
-    }  
-}
+      } else if(a % 2 !== 0){
+         return a
+      } else {
+       return b
+    }
+  }
+
 
   veiwMoney()
   console.log(getMoney(999)) 
   console.log(square(9))
   console.log(cal(2,9,3))
   
-  console.log(oed(4,5))
+  console.log(oed(9,9))
 
 </script>
 
