--- a/index.html
+++ b/index.html
@@ -40,21 +40,22 @@
     } return num3
   }
 
-function dis(a,b,c){
-  console.log(b``2``-4ac)
+
+function dis (a,b,c){
+return b**2 - 4 * (a * c)
 }
 
 
 
-  function oed(a, b){
-    if(a % 2 === 0 && b % 2 === 0){
-      return a * b
-      } else if (a % 2 !== 0 && b % 2 !== 0){
-      return a + b
+  function oed(e, f){
+    if(e % 2 === 0 && f % 2 === 0){
+      return e * f
+      } else if (a % 2 !== 0 && f % 2 !== 0){
+      return e + f
       } else if(a % 2 !== 0){
-         return a
+         return e
       } else {
-       return b
+       return f
     }
   }
 
@@ -63,8 +64,8 @@ function dis(a,b,c){
   console.log(getMoney(999)) 
   console.log(square(9))
   console.log(cal(2,9,3))
-  
-  console.log(oed(9,9))
+  console.log(dis(10,20,4))
+  console.log(oed())
 
 </script>
 
