--- a/index.html
+++ b/index.html
@@ -11,61 +11,32 @@
 
 <script>
 
-  let name = 'Deni';//string
-  const age = 16; //number
-  if(age <  15){
-    console.log('accsess prohibited')
-  }else{
-    console.log(`hello ${name}`)
-  }
+    let person = {
+      first_name: 'Fritz',
+      last_name: 'Nachtnebel',
+      age: '34',
+      height: '194cm',
+      money: '-1000$',
+      login: {
+        password: '12345',
+      }
+      
+      }
 
-  function veiwMoney(){
-    console.log('вот вам 10$')
-  }
+    person.address = 'Germany, berlin, Pasiser Platz';
 
-  function getMoney(cash$){
-    return `вот вам ${cash$}$` 
-  }
+    let pass = '12346';
 
-  function square(num){
-    return num * num
-  }
-  
-  function cal(num1, num2, num3){
-    if(num1 > num2 && num1 > num3){
-      return num1
-    }
-    else if(num2 > num1 && num2 > num3){
-        return num2
-    } return num3
-  }
-
-
-function dis (a,b,c){
-return b**2 - 4 * (a * c)
-}
-
-
-
-  function oed(e, f){
-    if(e % 2 === 0 && f % 2 === 0){
-      return e * f
-      } else if (a % 2 !== 0 && f % 2 !== 0){
-      return e + f
-      } else if(a % 2 !== 0){
-         return e
+    function passw(){
+      if(pass === person.login.password){
+        return `welcome ${person.first_name} ${person.last_name}`
       } else {
-       return f
+        return `The specified password ${pass} is not correct, try again.`
+      }
     }
-  }
 
-
-  veiwMoney()
-  console.log(getMoney(999)) 
-  console.log(square(9))
-  console.log(cal(2,9,3))
-  console.log(dis(10,20,4))
-  console.log(oed())
+    console.log(person)
+    console.log(passw())
 
 </script>
 
