--- a/index.html
+++ b/index.html
@@ -11,33 +11,40 @@
 
 <script>
 
-    let person = {
-      first_name: 'Fritz',
-      last_name: 'Nachtnebel',
-      age: '34',
-      height: '194cm',
-      money: '-1000$',
-      login: {
-        password: '12345',
-      }
-      
-      }
+  let arr = ['lorem', 123, true,'ipsum',]
 
-    person.address = 'Germany, berlin, Pasiser Platz';
+  console.log(arr.length);
+  console.log(arr[arr.length - 1]);
+  console.log(arr[0]);
+  
+  arr.unshift(1,2,3,);
+  arr.shift();
+  arr.splice(4,5,);
 
-    let pass = '12346';
+  console.log(arr);
 
-    function passw(){
-      if(pass === person.login.password){
-        return `welcome ${person.first_name} ${person.last_name}`
-      } else {
-        return `The specified password ${pass} is not correct, try again.`
-      }
-    }
+  let em = [];
 
-    console.log(person)
-    console.log(passw())
+  em.push(1,'zwei',3,false,'fem',);
 
+  console.log(em);
+  
+ 
+
+ let number = [1,3,5,7,9] 
+ 
+ number[0] = 2 
+ number[1] = 4 
+ number[2] = 6 
+ number[3] = 8
+ number[4] = 10
+ 
+ console.log(number)
+ 
+ number.splice(1,3)
+  
+ //6) Given an array with odd numbers let number = [1, 3, 5, 7, 9]. Print the console all the elements making them even
+ //7) Remove elements from the array in the middle. Replace array elements
 </script>
 
 </body>
