--- a/index.html
+++ b/index.html
@@ -11,40 +11,87 @@
 
 <script>
 
-  let arr = ['lorem', 123, true,'ipsum',]
+  let Each = [10, 2762, 0.42, 192, 3, 28, 1125, 2018, 34, 66, 100]
 
-  console.log(arr.length);
-  console.log(arr[arr.length - 1]);
-  console.log(arr[0]);
+  Each.forEach(function(item){
+    if ( item % 2 !== 0){
+    console.log(item) ;
+    }
+  })
+
+  let text = [ 'lorem ipsum', 'javascript', 'php', 'css', 'react', 'git', 'html', 'mysql' ]
   
-  arr.unshift(1,2,3,);
-  arr.shift();
-  arr.splice(4,5,);
+  let text2 = text.filter(function(item, key){
+    return item.length >= 4
+  })
 
-  console.log(arr);
-
-  let em = [];
-
-  em.push(1,'zwei',3,false,'fem',);
-
-  console.log(em);
+  console.log(text2);
   
- 
 
- let number = [1,3,5,7,9] 
- 
- number[0] = 2 
- number[1] = 4 
- number[2] = 6 
- number[3] = 8
- number[4] = 10
- 
- console.log(number)
- 
- number.splice(1,3)
+  let tall = [1, -3, 5, 6, -7, 8, 9, -11]
+
+  let tall2 = tall.filter(function(item, key){
+    return item < -0
+  })
+
+  console.log(tall2)
+
+
+  let zahlen = [10, 2762, 0.42, 192, 3, 28, 1125, 2018, 34, 66, 100]
+
+  zahlen.forEach(function(item){
+    if ( item % 2 == 0){
+      console.log(item);
+    }
+  })
+
+
+  let wasser = [ 'lorem ipsum', 'javascript', 'php', 'css', 'react', 'git', 'html', 'mysql']
+
+  let wasser2 = wasser.map(function(item, key){
+    if ( 3 < item.length ){
+      console.log(item)
+    }
+  })
+
   
- //6) Given an array with odd numbers let number = [1, 3, 5, 7, 9]. Print the console all the elements making them even
- //7) Remove elements from the array in the middle. Replace array elements
+  let square = [5,6,7,8,9]
+
+  square.forEach(function(item, key){
+    console.log(item * item)
+  })
+
+  
+  let svar = [{a: 10, b: 5}, {a: 20, b: 22}, {a: 131, b:55}]
+
+  let svar2 = svar.map(function(item, key){
+    return item.a + item.b
+  })
+
+  console.log(svar2)
+
+
+  let minus = [-13, 0, 12, 1662, -0.32, -102, -2]
+
+  let minus2 = minus.filter(function(item, key){
+    return item < -0
+  })
+
+  minus3 = minus2.reduce(function(sum, current){
+    return sum + current
+  }, 0);
+
+  console.log(minus3)
+
+
+  let yes = [ {x: 10, y: "lorem"}, {x: 21, y: "lorem"}, {x: -17, y: "lorem"}, {x: 156, y : "lorem"}];
+
+  yes2 = yes.reduce(function(sum, item){
+    return sum + item.x
+  }, 0);
+
+  console.log(yes2)
+
 </script>
 
 </body>
