--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 
 let arr_1 = [101, 202, 303, 404, 505]; 
 let arr_2 = [606, 707, 808, 909];
-let superArr = arr_1.concat(arr_2);
-
+let superArr = [...arr_1, ...arr_2];
+console.log(superArr)
 console.log(Math.min(...superArr));
 
 let obj = {width: 300, height: 550}
