--- a/index.html
+++ b/index.html
@@ -12,37 +12,27 @@
     </style>
 </head>
 <body>
-  <ol id="ol">
-    <li>lorem 1</li>
-    <li>lorem 2</li>
-    <li>lorem 3</li>
-    <li class="main">lorem 4</li>
-  </ol>
-
-
+ 
+<ul id="ul"></ul>
 
 <script>
 
-let ol = document.getElementById('ol');
+let ul = document.getElementById('ul');
 
 let li = document.createElement('li');
+let li2 = document.createElement('li');
+let li3 = document.createElement('li');
+let li4 = document.createElement('li');
 
-li.append('orem');
-ol.append(li)
-console.log(li);
+ul.append(li);
+ul.append(li2);
+ul.append(li3);
+ul.append(li4);
 
-ol.append('lorem');
-
-li.classList.add('bur')
-li.classList.toggle('bur')
-
-ol.before('before');
-ol.after('after');
-
-let a = li.classList.contains('bur')
-
-console.log(document.body.innerHTML);
-
+li.innerHTML = 'lorem'
+li2.innerHTML = 'lorem'
+li3.innerHTML = 'lorem'
+li4.innerHTML = 'lorem'
 
 </script>
 
